fix: remove overflow hidden

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -21,7 +21,6 @@
   } 
 
 body {
-  overflow: hidden;
   background: var(--bg-primary);
   font-weight: var(--fw-normal);
   font-size: var(--fsz-normal);
